# cmake-lame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake-lame-config.cmake  cmake_install.cmake
lame-3.100/: Makefile  Makefile.MSVC  config.status  configFixed.h.in  libtool
lame-3.100/ACM/: Makefile
lame-3.100/ACM/ADbg/: Makefile
lame-3.100/ACM/ddk/: Makefile
lame-3.100/ACM/tinyxml/: Makefile
lame-3.100/Dll/: Makefile
lame-3.100/doc/: Makefile
lame-3.100/doc/html/: Makefile
lame-3.100/doc/man/: Makefile
lame-3.100/dshow/: Makefile
lame-3.100/frontend/: Makefile
lame-3.100/frontend/.deps/: brhist.Po  console.Po  get_audio.Po  lame_main.Po  lametime.Po  main.Po  parse.Po  timestatus.Po
lame-3.100/include/: Makefile
lame-3.100/libmp3lame/: Makefile
lame-3.100/libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
lame-3.100/libmp3lame/i386/: Makefile
lame-3.100/libmp3lame/vector/: Makefile
lame-3.100/libmp3lame/vector/.deps/: xmm_quantize_sub.Plo
lame-3.100/mac/: Makefile
lame-3.100/macosx/: Makefile
lame-3.100/macosx/English.lproj/: Makefile
lame-3.100/macosx/LAME.xcodeproj/: Makefile
lame-3.100/misc/: Makefile
lame-3.100/mpglib/: Makefile
lame-3.100/mpglib/.deps/: common.Plo  dct64_i386.Plo  decode_i386.Plo  interface.Plo  layer1.Plo  layer2.Plo  layer3.Plo  tabinit.Plo
lame-3.100/vc_solution/: Makefile
